--- a/package.json
+++ b/package.json
@@ -107,7 +107,10 @@
     "vitest": "^3.1.3",
     "concurrently": "^8.2.2",
     "http-server": "^14.1.1",
-    "wait-on": "^7.2.0"
+    "wait-on": "^7.2.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "rollup": "^4.9.0"
   },
   "eslintConfig": {
     "extends": [
