feat: typography support

--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "types": "dist/index.d.ts",
   "files": [
     "dist",
-    "src/design-tokens.css"
+    "src/design-tokens.css",
+    "src/typography.css"
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsup src/components/ui/index.ts --dts --format esm,cjs --out-dir dist --tsconfig tsconfig.app.json && npm run build:tokens && cp src/design-tokens.css dist/ && echo '@import \"./design-tokens.css\";' > dist/index.css",
+    "build": "tsup src/components/ui/index.ts --dts --format esm,cjs --out-dir dist --tsconfig tsconfig.app.json && npm run build:tokens && cp src/design-tokens.css src/typography.css dist/ && echo '@import \"./design-tokens.css\";\n@import \"./typography.css\";' > dist/index.css",
     "build:tokens": "style-dictionary build --config style-dictionary.config.js",
     "build:storybook": "storybook build",
     "build-storybook": "storybook build",
