--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:storybook": "storybook build",
     "build-storybook": "storybook build",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "storybook:tokens": "npm run build:tokens && npm run storybook",
@@ -95,6 +96,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "^0.12.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^16.0.0",
     "playwright": "^1.52.0",
     "storybook": "^8.6.12",
