fix: add tailwind theme to dist

--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "goodparty-styleguide",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
     "src/design-tokens.css",
+    "src/tailwind-theme.css",
     "src/typography.css"
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsup src/components/ui/index.ts --dts --format esm,cjs --out-dir dist --tsconfig tsconfig.app.json && npm run build:tokens && cp src/design-tokens.css src/typography.css dist/ && echo '@import \"./design-tokens.css\";\n@import \"./typography.css\";' > dist/index.css",
+    "build": "tsup src/components/ui/index.ts --dts --format esm,cjs --out-dir dist --tsconfig tsconfig.app.json && npm run build:tokens && cp src/design-tokens.css src/tailwind-theme.css src/typography.css dist/ && echo '@import \"./design-tokens.css\";\n@import \"./tailwind-theme.css\";\n@import \"./typography.css\";' > dist/index.css",
     "build:tokens": "style-dictionary build --config style-dictionary.config.js",
     "build-storybook": "storybook build",
     "test-storybook": "test-storybook",
