--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "test-storybook": "test-storybook",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lint:format": "npm run lint && npm run format",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "storybook:tokens": "npm run build:tokens && npm run storybook",
@@ -80,6 +83,8 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
     "@eslint/js": "^9.25.0",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/addon-onboarding": "^8.6.12",
     "@storybook/blocks": "^8.6.12",
@@ -94,13 +99,19 @@
     "@vitejs/plugin-react-swc": "^3.9.0",
     "@vitest/browser": "^3.1.3",
     "@vitest/coverage-v8": "^3.1.3",
+    "concurrently": "^8.2.2",
     "eslint": "^9.25.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "^0.12.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^16.0.0",
+    "http-server": "^14.1.1",
     "playwright": "^1.52.0",
+    "prettier": "^3.5.3",
+    "rollup": "^4.9.0",
     "storybook": "^8.6.12",
     "style-dictionary": "^5.0.0",
     "tsup": "^8.5.0",
@@ -109,12 +120,7 @@
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
     "vitest": "^3.1.3",
-    "concurrently": "^8.2.2",
-    "http-server": "^14.1.1",
-    "wait-on": "^7.2.0",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "rollup": "^4.9.0"
+    "wait-on": "^7.2.0"
   },
   "eslintConfig": {
     "extends": [
