Fix build script to include complete CSS styles in distribution
- Copy src/index.css instead of overwriting with just imports
- This ensures button CSS classes (.button-primary, etc.) are included in the distributed package
- Fixes issue where buttons don't show correct styling in consuming applications

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsup src/components/ui/index.ts --dts --format esm,cjs --out-dir dist --tsconfig tsconfig.app.json && npm run build:tokens && cp src/design-tokens.css src/tailwind-theme.css src/typography.css dist/ && echo '@import \"./design-tokens.css\";\n@import \"./tailwind-theme.css\";\n@import \"./typography.css\";' > dist/index.css",
+    "build": "tsup src/components/ui/index.ts --dts --format esm,cjs --out-dir dist --tsconfig tsconfig.app.json && npm run build:tokens && cp src/design-tokens.css src/tailwind-theme.css src/typography.css src/index.css dist/",
     "build:tokens": "style-dictionary build --config style-dictionary.config.js",
     "build-storybook": "storybook build",
     "test-storybook": "test-storybook",
