--- a/package.json
+++ b/package.json
@@ -69,8 +69,10 @@
     "date-fns": "^3.0.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "lucide-react": "^0.542.0",
     "next-themes": "^0.4.6",
     "react": "^18.0.0 || ^19.0.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^18.0.0 || ^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-resizable-panels": "^3.0.2",
