--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goodparty-styleguide",
-  "version": "1.3.34",
+  "version": "1.3.36",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -31,8 +31,7 @@
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
     "react-dom": "^18.0.0 || ^19.0.0",
-    "tailwindcss": "^4.0.0",
-    "tw-animate-css": "^1.0.0"
+    "tailwindcss": "^4.0.0"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
